correct fixed position
Prevent the picker popup being masked by the filter-fg container
fix the scrollbar color inside sidenav

--- a/src/components/filterForm2/FilterForm.css
+++ b/src/components/filterForm2/FilterForm.css
@@ -4,6 +4,10 @@
 
 .filterform-container {
   margin-top: 15px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: calc(100vh - 80px);
+  padding-right: 15px;
 }
 
 .input:optional {
