--- a/src/pages/vetting/Vetting.css
+++ b/src/pages/vetting/Vetting.css
@@ -1,19 +1,19 @@
 .dtp-vetting-upper > span > div > .react-calendar {
   position: fixed;
-  top: calc(100vh - 307px);
-  left: 231px;
+  top: auto;
   line-height: 0.5rem;
-  width: 320px !important;
+  width: 350px !important;
   border-radius: 5px;
   display: block;
+  max-width: unset;
 }
 
 .dtp-vetting-lower > span > div > .react-calendar {
   position: fixed;
   bottom: calc(0vh + 10px);
-  left: 231px;
   line-height: 0.5rem;
-  width: 320px !important;
+  width: 350px !important;
   border-radius: 5px;
   display: block;
+  max-width: unset;
 }
